--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: chanmuk/gitdockerci:latest
+          tags: nodejs/gitdockerci:latest
